--- a/src/test/resources/routes.properties
+++ b/src/test/resources/routes.properties
@@ -14,10 +14,13 @@ delete_url=https://petstore.swagger.io/v2/user/{username}
      
     
 #Store Model
-    	#Here you can add Store url's
+  store_post_url=https://petstore.swagger.io/v2/store/order
+  store_getOrderID_url=https://petstore.swagger.io/v2/store/order/{orderid}
+  store_getInventoryStatus_url=https://petstore.swagger.io/v2/store/inventory
+  store_deletePurchaseID_url=https://petstore.swagger.io/v2/store/order/{orderid}
     
 #Pet Model
     	#Here you can add Pet url's
-}
+
 
 
