--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,11 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean test || true
+      
+    - name: Upload Test Report (JUnit/TestNG)
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-report
+        path: target/surefire-reports
 
 
